# starter-api-rust

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  starter-api.postman_collection.json
migrations/: 001_init.sql
src/: config.rs  errors.rs  main.rs  response.rs  routes.rs  seeder.rs
src/handlers/: auth.rs  lookup.rs  mod.rs  permissions.rs  roles.rs  users.rs
src/middleware/: auth.rs
src/models/: mod.rs  password_reset_token.rs  permission.rs  refresh_token.rs  role.rs  social_account.rs  user.rs
src/services/: auth_service.rs  mod.rs  permission_service.rs  role_service.rs  user_service.rs
src/utils/: jwt.rs  mail.rs  mod.rs  upload.rs
