[package]
name = "starter-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "starter-api"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "mysql", "postgres", "sqlite", "uuid", "chrono", "any"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
bcrypt = "0.15"
dotenvy = "0.15"
lettre = { version = "0.11", features = ["tokio1", "tokio1-native-tls"] }
reqwest = { version = "0.12", features = ["json"] }
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
